--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/throttler": "^6.2.1",
     "@prisma/client": "^5.22.0",
     "bcrypt": "^5.1.1",
     "multer": "^1.4.5-lts.1",
