--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bcrypt": "^5.1.1",
     "multer": "^1.4.5-lts.1",
     "nest-winston": "^1.9.7",
+    "nodemailer": "^6.9.16",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "uuid": "^11.0.3",
@@ -42,6 +43,7 @@
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
+    "@types/nodemailer": "^6.4.16",
     "@types/supertest": "^6.0.0",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
