--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/throttler": "^6.2.1",
     "@prisma/client": "^5.22.0",
     "bcrypt": "^5.1.1",
+    "hashids": "^2.3.0",
     "multer": "^1.4.5-lts.1",
     "nest-winston": "^1.9.7",
     "nodemailer": "^6.9.16",
@@ -40,6 +41,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
+    "@types/hashids": "^2.0.1",
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
