--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^8.0.7",
     "@nestjs/throttler": "^6.2.1",
     "@prisma/client": "^5.22.0",
     "bcrypt": "^5.1.1",
