feat: renew env.example

--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,5 @@ AWS_BUCKET_NAME=your-s3-bucket-name  # Replace with your actual bucket name
 GCP_PROJECT_ID=your-gcp-project-id
 GCP_KEY_FILE=path/to/your/service-account-key.json
 GCP_BUCKET_NAME=your-gcs-bucket-name
+
+PORT=8080
